fix: Spacing on mouse scroll cta

--- a/src/styles/components/sidebar.css
+++ b/src/styles/components/sidebar.css
@@ -28,7 +28,7 @@
 	align-items: center;
 	justify-content: center;
 
-	height: 125px;
+	height: 100px;
 	width: 100%;
 
 	bottom: 0;
